# API-MADL

./: .env.txt  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
madl/: app.py  database.py  models.py  security.py  utils.py
madl/routers/: accounts_router.py  auth_router.py  books_router.py  novelists_router.py
madl/schemas/: account_schema.py  book_schema.py  message_schema.py  novelist_schema.py
migrations/: env.py
migrations/versions/: 8ad24bf94a90_create_all_tables.py
misc/: secret_key_gen.py
tests/: conftest.py  test_app.py  test_endpoint_accounts.py  test_endpoint_books.py  test_endpoint_novelists.py  test_local_db.py  test_security.py
